[gd_scene load_steps=44 format=3 uid="uid://bg1pw08bo3vap"]

[ext_resource type="Script" uid="uid://cshma54torbcy" path="res://Scenes/Mobs/Mashroom/mashroom.gd" id="1_7hxyy"]
[ext_resource type="Texture2D" uid="uid://d2jksdj24qv06" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Attack.png" id="1_osk7a"]
[ext_resource type="Texture2D" uid="uid://bpcmrmd3tbaek" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Idle.png" id="1_v4ghw"]
[ext_resource type="Texture2D" uid="uid://d0xddg4tyymcl" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Death.png" id="2_7hxyy"]
[ext_resource type="Texture2D" uid="uid://d01tyrugwesme" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Run.png" id="4_doi17"]
[ext_resource type="Texture2D" uid="uid://p7xyofi3cchp" path="res://Assets/Monsters_Creatures_Fantasy/Mushroom/Take Hit.png" id="5_hrs20"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nbwkr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_owrjt"]
atlas = ExtResource("1_osk7a")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxayu"]
atlas = ExtResource("1_osk7a")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jjxo"]
atlas = ExtResource("1_osk7a")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr5hr"]
atlas = ExtResource("1_osk7a")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l7dm"]
atlas = ExtResource("1_osk7a")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nr42"]
atlas = ExtResource("1_osk7a")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xwid"]
atlas = ExtResource("1_osk7a")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl8p4"]
atlas = ExtResource("1_osk7a")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pklwr"]
atlas = ExtResource("2_7hxyy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h4n5"]
atlas = ExtResource("2_7hxyy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_roear"]
atlas = ExtResource("2_7hxyy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_25tge"]
atlas = ExtResource("2_7hxyy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6n6h"]
atlas = ExtResource("1_v4ghw")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp8qh"]
atlas = ExtResource("1_v4ghw")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qw5g"]
atlas = ExtResource("1_v4ghw")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_osk7a"]
atlas = ExtResource("1_v4ghw")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkp53"]
atlas = ExtResource("4_doi17")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvg0c"]
atlas = ExtResource("4_doi17")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vywkr"]
atlas = ExtResource("4_doi17")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3htdf"]
atlas = ExtResource("4_doi17")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxrh6"]
atlas = ExtResource("4_doi17")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlhcn"]
atlas = ExtResource("4_doi17")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtygh"]
atlas = ExtResource("4_doi17")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iem67"]
atlas = ExtResource("4_doi17")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow3mo"]
atlas = ExtResource("5_hrs20")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eklbp"]
atlas = ExtResource("5_hrs20")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5dbk"]
atlas = ExtResource("5_hrs20")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xxwf"]
atlas = ExtResource("5_hrs20")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_v4ghw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owrjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxayu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jjxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr5hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l7dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nr42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xwid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl8p4")
}],
"loop": false,
"name": &"Attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pklwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h4n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roear")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25tge")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6n6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp8qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qw5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osk7a")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkp53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvg0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vywkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3htdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxrh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlhcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtygh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iem67")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow3mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eklbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5dbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xxwf")
}],
"loop": false,
"name": &"Take Hit",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_osk7a"]
length = 1.14286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}

[sub_resource type="Animation" id="Animation_7hxyy"]
length = 0.571429
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_doi17"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_hrs20"]
length = 1.14286
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="Animation" id="Animation_owrjt"]
length = 0.571429
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Take Hit"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxayu"]
_data = {
&"Attack": SubResource("Animation_osk7a"),
&"Death": SubResource("Animation_7hxyy"),
&"Idle": SubResource("Animation_doi17"),
&"Run": SubResource("Animation_hrs20"),
&"Take Hit": SubResource("Animation_owrjt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_doi17"]
size = Vector2(17.5, 14)

[node name="Mashroom" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_7hxyy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nbwkr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.43051e-06, -8)
scale = Vector2(0.81, 0.818333)
sprite_frames = SubResource("SpriteFrames_v4ghw")
animation = &"Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lxayu")
}
autoplay = "Idle"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(8.75, -1)
shape = SubResource("RectangleShape2D_doi17")

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
